# ivan

./: README.md  pyproject.toml  syllabus.md
src/ivan/: __init__.py  wmpd.ipynb
